Remove new URL